--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -27,7 +27,7 @@
 .transactions {
   margin-top: 30px;
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   gap: 20px;
   padding: 0 10px;
   padding-bottom: var(--spacing-bottom);
@@ -64,7 +64,7 @@
 
   .list {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     gap: 30px;
     margin-top: 10px;
     background-color: var(--color-white);
