--- a/components/Loader/Loader.module.scss
+++ b/components/Loader/Loader.module.scss
@@ -1,15 +1,12 @@
 .loader {
-  position: absolute;
-  z-index: 100;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  position: relative;
+  height: 100vh;
   padding: 67px 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  overflow: hidden;
 
   background: radial-gradient(50% 50% at 50% 50%, #00c3ff 0%, #007aff 100%);
   color: var(--color-white);
@@ -17,12 +14,13 @@
   .bg {
     position: absolute;
     top: 0;
+    bottom: 0;
 
-    .shape {
+    & .shape {
       position: absolute;
-      bottom: 0;
       left: 0;
       right: 0;
+      bottom: 0;
       height: 300px;
 
       background: linear-gradient(180deg, rgba(0, 122, 255, 0) 0%, #007aff 59.42%);
