--- a/app/operations/page.module.scss
+++ b/app/operations/page.module.scss
@@ -28,7 +28,7 @@
   margin-top: 30px;
   display: flex;
   flex-direction: column-reverse;
-  gap: 20px;
+  // gap: 20px;
   padding: 0 10px;
   padding-bottom: var(--spacing-bottom);
 
@@ -71,6 +71,10 @@
     padding: 15px;
     border-radius: 20px;
     box-shadow: 0px 12px 120px rgba(132, 139, 147, 0.12);
+
+    &:not(:first-of-type) {
+      margin-bottom: 20px;
+    }
 
     .item {
       position: relative;
